--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,50 +8,109 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
-h1 {
-    /* 4rem = 40px (4 * 10px) */
-    font-size: 4rem;
-}
-  
-h2 {
-    font-size: 3.5rem;
-}
-  
-h3 {
-    font-size: 3rem;
-}
-  
-h4 {
-    font-size: 2.5rem;
-}
-  
-h5 {
-    font-size: 2rem;
-}
-  
-h6 {
-    font-size: 1.5rem;
-}
 
 body {
-    margin: 0;
-}
-
-.hero-image {
     background-image: url("../images/background1.jpg");
-    background-color: #cccccc;
-    height: 500px;
+    background-color: #000000;
+    background-attachment:fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    color: #fff;
+}
+
+h1 {
+    font-size: 3.5rem;
 }
   
-.hero-text {
+h2 {
+    font-size: 3rem;
+}
+  
+h3 {
+    font-size: 2.5rem;
+}
+  
+h4 {
+    font-size: 2rem;
+}
+  
+h5 {
+    font-size: 1.5rem;
+}
+
+/* 1rem = 10px (1 * 10px) */
+h6 {
+    font-size: 1rem;
+}
+
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+}
+
+nav a {
+    color: var(--color2);
+    padding: 14px 20px;
+    text-decoration: none;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
+}
+
+/* Change color on hover */
+nav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.first {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 40px;
+    justify-content: space-evenly;
+}
+
+.headshot img {
+    background-color: #000000;
+    
+    height: auto;
+    padding: 15px;
+    border-radius: 5px;
+    flex: 0 0 400px;
+}
+
+#bio {
+    border-style: solid;
+    border-width: 1px;
+    padding: 15px;
+    flex: 0 0 50%;
+    align-content: center;
+}
+/*
+.second {
+    display: inline-flex;
+    flex-wrap: wrap;
+    padding: 40px;
+    justify-content: space-evenly;
+}
+*/
+.second div {
+    display: inline-flex;
+    flex-wrap: wrap;
+    padding: 40px;
+    justify-content: space-evenly;
+}
+
+.third {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 40px;
+    justify-content: space-evenly;
+}
+
+.forth {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 40px;
+    justify-content: space-evenly;
 }
