--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,20 +17,24 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
+    justify-content: space-evenly;
 }
 
 h1 {
     font-size: 3.5rem;
+    line-height: 4.5rem;
 }
   
 h2 {
     font-size: 3rem;
+    line-height: 4rem;
 }
   
 h3 {
     font-size: 2.5rem;
 }
-  
+
+/* 2rem = 20px (2 * 10px) */
 h4 {
     font-size: 2rem;
 }
@@ -39,15 +43,20 @@ h5 {
     font-size: 1.5rem;
 }
 
-/* 1rem = 10px (1 * 10px) */
 h6 {
     font-size: 1rem;
+    line-height: 2rem;
+    text-align: center;
 }
 
+header {
+    padding: 2%;
+}
 
 nav {
     display: flex;
     justify-content: flex-end;
+    font-size: 1.5rem;
 }
 
 nav a {
@@ -72,11 +81,10 @@ nav a:hover {
 
 .headshot img {
     background-color: #000000;
-    
     height: auto;
+    max-width: 350px;
     padding: 15px;
     border-radius: 5px;
-    flex: 0 0 400px;
 }
 
 #bio {
@@ -85,32 +93,39 @@ nav a:hover {
     padding: 15px;
     flex: 0 0 50%;
     align-content: center;
+    line-height: 1.2rem;
 }
-/*
+
+#bio p {
+    padding: 5px;
+}
+
 .second {
-    display: inline-flex;
-    flex-wrap: wrap;
-    padding: 40px;
-    justify-content: space-evenly;
+    padding: 5px;
+    text-align: center;
 }
-*/
-.second div {
-    display: inline-flex;
+
+.project-list {
+    display: flex;
     flex-wrap: wrap;
+    padding: 5px;
+    justify-content: center;
+}
+
+.second .project {
+    display: block;
     padding: 40px;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .third {
-    display: flex;
+    display: inline-block;
     flex-wrap: wrap;
     padding: 40px;
-    justify-content: space-evenly;
 }
 
 .forth {
-    display: flex;
+    display: inline-block;
     flex-wrap: wrap;
     padding: 40px;
-    justify-content: space-evenly;
 }
