more updates and edits. added my resume and some javascript

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: #fff;
+    color: var(--color3);
     justify-content: space-evenly;
 }
 
@@ -44,8 +44,8 @@ h5 {
 }
 
 h6 {
-    font-size: 1rem;
-    line-height: 2rem;
+    font-size: .7rem;
+    line-height: 3rem;
     text-align: center;
 }
 
@@ -68,18 +68,18 @@ nav a {
 
 /* Change color on hover */
 nav a:hover {
-    background-color: #ddd;
+    background-color: var(--color1);
     color: black;
 }
 
-.first {
+.headshot {
     display: flex;
     flex-wrap: wrap;
     padding: 40px;
     justify-content: space-evenly;
 }
 
-.headshot img {
+.headshot figure img {
     background-color: #000000;
     height: auto;
     max-width: 350px;
@@ -100,7 +100,7 @@ nav a:hover {
     padding: 5px;
 }
 
-.second {
+#projects {
     padding: 5px;
     text-align: center;
 }
@@ -112,20 +112,34 @@ nav a:hover {
     justify-content: center;
 }
 
-.second .project {
+.project-list article {
     display: block;
     padding: 40px;
+    max-width: 400px;
     justify-content: center;
 }
 
-.third {
+.project-list ul {
+    list-style-type: circle;
+}
+
+#influences {
     display: inline-block;
     flex-wrap: wrap;
     padding: 40px;
 }
 
-.forth {
+#contact {
     display: inline-block;
     flex-wrap: wrap;
     padding: 40px;
+}
+
+#contact a {
+    color: var(--color3);
+}
+
+#contact a:hover {
+    background-color: var(--color1);
+    color: black;
 }
