made some final changes and ready to upload the assignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --color1: rgb(60, 133, 216);
-    --color2: rgb(32, 32, 255);
+    --color1: #2E85FF;
+    --color2: #000;
     --color3: #fff;
     /* other colors to try Capri (#01BFFF), Maya Blue (#60CCFF), Winter Wizard (#96DDFF), RYB Yellow (#FFFA32), Dodger Blue (#2E85FF) and RYB Blue (#004AFF) */
 }
@@ -11,14 +11,14 @@
 
 body {
     background-image: url("../images/background1.jpg");
-    background-color: #000000;
+    background-color: var(--color2);
     background-attachment:fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     color: var(--color3);
     justify-content: space-evenly;
-    padding: 15px;
+    line-height: 1.2rem;
 }
 
 h1 {
@@ -29,7 +29,7 @@ h1 {
   
 h2 {
     font-size: 3rem;
-    line-height: 4rem;
+    line-height: 4.5rem;
 }
   
 h3 {
@@ -39,6 +39,7 @@ h3 {
 /* 2rem = 20px (2 * 10px) */
 h4 {
     font-size: 2rem;
+    line-height: 3rem;
 }
 
 h5 {
@@ -51,19 +52,21 @@ h6 {
 }
 
 header {
+    margin: 15px;
     border: 2px;
     border-style: double;
-    padding: 2%;
+    padding: 15px;
 }
 
 nav {
     display: flex;
     justify-content: flex-end;
     font-size: 1.5rem;
+    padding: 10px;
 }
 
 nav a {
-    color: var(--color2);
+    color: var(--color1);
     padding: 14px 20px;
     text-decoration: none;
     text-align: center;
@@ -72,18 +75,19 @@ nav a {
 /* Change color on hover */
 nav a:hover {
     background-color: var(--color1);
-    color: black;
+    color: var(--color2);
 }
 
 .headshot {
     display: flex;
     flex-wrap: wrap;
+    margin: 10px;
     padding: 40px;
     justify-content: space-evenly;
 }
 
 .headshot figure img {
-    background-color: #000000;
+    background-color: var(--color2);
     height: auto;
     max-width: 350px;
     padding: 15px;
@@ -93,7 +97,8 @@ nav a:hover {
 #bio {
     border-style: solid;
     border-width: 1px;
-    padding: 15px;
+    margin: 10px;
+    padding: 20px;
     flex: 0 0 50%;
     align-content: center;
     line-height: 1.2rem;
@@ -130,6 +135,10 @@ ul {
     justify-content: center;
 }
 
+.project-list img:hover {
+    box-shadow: inset 0px 0px 5px var(--color3), 0 0 12px var(--color1);
+}
+
 #influences {
     display: inline-block;
     flex-wrap: wrap;
@@ -148,5 +157,19 @@ ul {
 
 #contact a:hover {
     background-color: var(--color1);
-    color: black;
+    color: var(--color2);
+}
+
+footer {
+    text-align: center;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        justify-content: center;
+        font-size: 1.5rem;
+    }
+
 }
